# k8s-operator-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  dev-values.yaml  pyproject.toml  requirements.in  requirements.txt  skaffold.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml
deployment/helm/k8s-agent/: Chart.yaml  values.yaml
deployment/helm/k8s-agent/charts/: redis-stack-server-0.4.8.tgz
deployment/helm/k8s-agent/templates/: NOTES.txt  _container.tpl  _helpers.tpl  _pod.tpl  daemonset.yaml  deployment.yaml  ingress.yaml  pvc.yaml  role.yaml  role_bindings.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: Pipfile  architecture.md  conf.py  index.md  tooling.md  usage.md
docs/_static/completions/: h  k
k8s_agent/: __main__.py  agent.py  k8sController.py  prompts.py  settings.py  webapp.py
ui/: .gitignore  package.json
ui/app/components/: ChatMessageBubble.tsx  ChatWindow.tsx  SourceBubble.tsx
